RESOLVED FIXED279516
[css-transitions] `transition-behavior: allow-discrete` may not start a transition for a custom property
https://bugs.webkit.org/show_bug.cgi?id=279516
Summary [css-transitions] `transition-behavior: allow-discrete` may not start a trans...
Antoine Quint
Reported 2024-09-11 08:21:31 PDT
Created attachment 472524 [details] Test Consider the attached test case which does the following: const target = document.body; target.style.setProperty("--foo", "10"); getComputedStyle(target).getPropertyValue("--foo"); target.style.transition = "--foo 1s allow-discrete"; target.style.setProperty("--foo", "20"); This does not yield a transition. I believe this is because we enter the `transitionPropertiesContainAll` code path under `Styleable::updateCSSTransitions()` which fails to account for custom properties, or at least non-registered properties.
Attachments
Test (426 bytes, text/html)
2024-09-11 08:21 PDT, Antoine Quint
no flags
Test with `transition-property: all` (465 bytes, text/html)
2024-09-11 08:22 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2024-09-11 08:22:00 PDT
Created attachment 472525 [details] Test with `transition-property: all` Another failing test case, likely failing for the same reason.
Antoine Quint
Comment 2 2024-09-11 08:24:40 PDT
"Test" only works in Firefox Nightly. The other test fails in Chrome, Firefox and Safari.
Radar WebKit Bug Importer
Comment 3 2024-09-11 09:02:41 PDT
Antoine Quint
Comment 4 2024-09-11 09:08:02 PDT
EWS
Comment 5 2024-09-11 12:24:13 PDT
Committed 283498@main (ca687c87a080): <https://commits.webkit.org/283498@main> Reviewed commits have been landed. Closing PR #33470 and removing active labels.
Antoine Quint
Comment 6 2024-09-12 01:16:37 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/48115
EWS
Comment 7 2024-09-18 15:55:33 PDT
Committed 283286.73@safari-7620-branch (2d811327a267): <https://commits.webkit.org/283286.73@safari-7620-branch> Reviewed commits have been landed. Closing PR #1822 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.