[css-transitions] `transition-behavior: allow-discrete` may not start a transition for a custom property https://bugs.webkit.org/show_bug.cgi?id=279516 rdar://135805387

Reviewed by Antti Koivisto.

When updating CSS Transitions for a target, we look at the previous style and the new style and compile
properties based on the `transition-property` value in both styles. If we encounter `all` we enter a specific
branch in `Styleable::updateCSSTransitions()` where we compile all properties that may have changed between
the two styles.

When we initially gather properties, any custom properties that is explicitly set via `transition-property` is
stored in a `transitionCustomProperties` hash.

In the case of custom properties, we have check in place to see if a given `StyleCustomPropertyData` object
has any animatable property to return early. This means that non-registered custom properties will be ignored.

But what goes wrong is that we previously would clear `transitionCustomProperties` if we're dealing with an `all`
case. This means that if `transition-property` was set to `all` for any of the styles being processed, any
non-registered custom property was ignored, even if it was explicitly set via `transition-property`.

We can simply remove the code that clears this hash.

* LayoutTests/imported/w3c/web-platform-tests/css/css-transitions/custom-property-and-allow-discrete-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-transitions/custom-property-and-allow-discrete.html:
* Source/WebCore/style/Styleable.cpp:
(WebCore::Styleable::updateCSSTransitions const):

Canonical link: https://commits.webkit.org/283498@main